load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

java_proto_library(
    name = "pb_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":pb_proto",
    ],
)

proto_library(
    name = "pb_proto",
    srcs = ["pb.proto"],
    visibility = ["//visibility:public"],
    deps = [],
)

go_proto_library(
    name = "pb_go_proto",
    importpath = "github.com/zenreach/badger/pb",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
    deps = [],
)

go_library(
    name = "go_default_library",
    embed = [":pb_go_proto"],
    importpath = "github.com/zenreach/badger/pb",
    visibility = ["//visibility:public"],
)
